--- a/components/meetup-item/MeetupItem.module.css
+++ b/components/meetup-item/MeetupItem.module.css
@@ -3,10 +3,13 @@
   border-radius: 0.5rem;
   overflow: hidden;
   margin-bottom: 2rem;
+  height: 50rem;
 }
 
 .img {
   width: 100%;
+  height: 60%;
+  object-fit: cover;
 }
 
 .content {
@@ -14,7 +17,8 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  padding: 2rem 0;
+  padding: 2rem;
+  text-align: center;
 }
 
 .title {
