--- a/pages/[meetupId]/index.module.css
+++ b/pages/[meetupId]/index.module.css
@@ -1,10 +1,14 @@
 .card {
   border: 1px solid lightgray;
   border-radius: 0.3rem;
+  height: 50rem;
+  overflow: hidden;
 }
 
 .img {
   width: 100%;
+  height: 60%;
+  object-fit: cover;
 }
 
 .content {
@@ -12,7 +16,8 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  padding: 2rem 0;
+  padding: 2rem;
+  text-align: center;
 }
 
 .title {
